<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <jacques.raul.uv.photoaday.GradientItemList
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_map_toolbar"
                    app:layout_constraintVertical_bias="0.759"

                    android:src="@drawable/round_imageview"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="45dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="4dp"
                            android:gravity="start"
                            android:text="@string/lbl_fecha_lista"
                            android:textColor="@color/black"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/campingName"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="4dp"
                            android:gravity="start"
                            android:layout_marginTop="8dp"
                            android:text="@string/lbl_ubicacion_lista"
                            android:textColor="@color/black"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/campingCategoria"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="16dp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </jacques.raul.uv.photoaday.GradientItemList>
</androidx.constraintlayout.widget.ConstraintLayout>